--- a/deno.json
+++ b/deno.json
@@ -4,6 +4,9 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
-    "graphql-request": "npm:graphql-request@^7.1.2"
+    "graphql": "npm:graphql@^16.10.0",
+    "graphql-request": "npm:graphql-request@^7.1.2",
+    "graphql-tag": "npm:graphql-tag@^2.12.6",
+    "urql": "npm:urql@^4.2.2"
   }
 }
